test/syntax/fail/node_call_in_combinatorial.sync
let node g x = x

let f = g true
